[gd_scene load_steps=18 format=2]

[ext_resource path="res://8-bit-hud.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://monochrome_tilemap_transparent_packed.png" type="Texture" id=2]
[ext_resource path="res://LevelSwitch.gd" type="Script" id=3]
[ext_resource path="res://8Bit Title Screen.mp3" type="AudioStream" id=4]

[sub_resource type="Gradient" id=26]
offsets = PoolRealArray( 0, 0.494792, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0.4831, 0.4831, 0.4831, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=25]
gradient = SubResource( 26 )

[sub_resource type="ParticlesMaterial" id=27]
lifetime_randomness = 1.0
emission_shape = 2
emission_box_extents = Vector3( 500, 500, 1 )
flag_disable_z = true
spread = 149.2
flatness = 0.6
gravity = Vector3( 0, 0, 0 )
initial_velocity = 2.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 1.0
linear_accel_random = 1.0
tangential_accel = 3.0
tangential_accel_random = 0.5
color_ramp = SubResource( 25 )

[sub_resource type="TileSet" id=4]
0/name = "monochrome_tilemap_transparent_packed.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 240, 208, 48, 48 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 256, Vector2( 0, 1 ), 260, Vector2( 0, 2 ), 4, Vector2( 1, 0 ), 320, Vector2( 1, 1 ), 325, Vector2( 1, 2 ), 5, Vector2( 2, 0 ), 64, Vector2( 2, 1 ), 65, Vector2( 2, 2 ), 1 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "monochrome_tilemap_transparent_packed.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 224, 32, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "monochrome_tilemap_transparent_packed.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 224, 0, 16, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "monochrome_tilemap_transparent_packed.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 256, 0, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "monochrome_tilemap_transparent_packed.png 4"
4/texture = ExtResource( 2 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 288, 16, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "monochrome_tilemap_transparent_packed.png 5"
5/texture = ExtResource( 2 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 304, 0, 16, 32 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "monochrome_tilemap_transparent_packed.png 6"
6/texture = ExtResource( 2 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 208, 32, 16, 16 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "monochrome_tilemap_transparent_packed.png 7"
7/texture = ExtResource( 2 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 256, 16, 16, 16 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "monochrome_tilemap_transparent_packed.png 8"
8/texture = ExtResource( 2 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 208, 0, 16, 16 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "monochrome_tilemap_transparent_packed.png 9"
9/texture = ExtResource( 2 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 96, 128, 16, 16 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=46]

[sub_resource type="StyleBoxTexture" id=2]

[sub_resource type="StyleBoxTexture" id=47]

[sub_resource type="DynamicFontData" id=48]
antialiased = false
font_path = "res://8-bit-hud.ttf"

[sub_resource type="DynamicFont" id=45]
size = 8
font_data = SubResource( 48 )

[sub_resource type="Animation" id=49]
resource_name = "Fade_in"
tracks/0/type = "bezier"
tracks/0/path = NodePath("ColorRect:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ColorRect:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ColorRect:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ColorRect:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/4/type = "value"
tracks/4/path = NodePath("ColorRect:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=50]
resource_name = "Fade_out"
tracks/0/type = "bezier"
tracks/0/path = NodePath("ColorRect:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ColorRect:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ColorRect:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ColorRect:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/4/type = "value"
tracks/4/path = NodePath("ColorRect:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=51]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[node name="Menu" type="Node2D"]
script = ExtResource( 3 )
next_level = "res://Lvl_selector.tscn"

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 224, 160 )
z_index = -1
amount = 500
lifetime = 4.0
randomness = 1.0
fixed_fps = 24
visibility_rect = Rect2( -500, -500, 1000, 1000 )
process_material = SubResource( 27 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 4 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 131074, 0, 0, 131075, 0, 1, 131076, 0, 2, 131079, 0, 0, 131080, 0, 1, 131081, 0, 1, 131082, 0, 1, 131083, 0, 2, 131087, 0, 0, 131088, 0, 1, 131089, 0, 1, 131090, 0, 1, 131091, 0, 1, 131092, 0, 2, 131095, 0, 0, 131096, 0, 1, 131097, 0, 2, 196610, 0, 65536, 196612, 0, 131074, 196615, 0, 131072, 196616, 0, 131073, 196617, 0, 131073, 196618, 0, 131073, 196619, 0, 131074, 196623, 0, 131072, 196624, 0, 131073, 196625, 0, 131073, 196626, 0, 131073, 196627, 0, 131073, 196628, 0, 131074, 196631, 0, 131072, 196633, 0, 65538, 262146, 0, 65536, 262147, 0, 65538, 262151, 5, 0, 262153, 9, 0, 262154, 9, 0, 262160, 9, 0, 262161, 9, 0, 262162, 5, 0, 262168, 0, 65536, 262169, 0, 65538, 327682, 0, 65536, 327683, 0, 65538, 327701, 7, 0, 327703, 3, 0, 327704, 0, 65536, 327705, 0, 65538, 393218, 0, 65536, 393219, 0, 65538, 393237, 0, 0, 393238, 0, 1, 393239, 0, 1, 393241, 0, 65538, 458754, 0, 65536, 458755, 0, 65538, 458773, 0, 131072, 458774, 0, 131073, 458775, 0, 131073, 458777, 0, 65538, 524290, 0, 65536, 524291, 0, 65538, 524292, 3, 0, 524294, 7, 0, 524310, 5, 0, 524312, 0, 65536, 524313, 0, 65538, 589826, 0, 65536, 589828, 0, 1, 589829, 0, 1, 589830, 0, 2, 589848, 0, 65536, 589849, 0, 65538, 655362, 0, 65536, 655364, 0, 131073, 655365, 0, 131073, 655366, 0, 131074, 655384, 0, 65536, 655385, 0, 65538, 720898, 0, 65536, 720899, 0, 65538, 720901, 5, 0, 720920, 0, 65536, 720921, 0, 65538, 786434, 0, 65536, 786435, 0, 65538, 786456, 0, 65536, 786457, 0, 65538, 851970, 0, 131072, 851971, 0, 131074, 851992, 0, 131072, 851993, 0, 131074, 917519, 2, 0, 983044, 1, 0, 983050, 3, 0, 983053, 4, 0, 983058, 1, 0, 983061, 4, 0, 1048578, 0, 0, 1048579, 0, 1, 1048580, 0, 1, 1048581, 0, 1, 1048582, 0, 1, 1048583, 0, 1, 1048584, 0, 1, 1048585, 0, 1, 1048586, 0, 1, 1048587, 0, 1, 1048588, 0, 1, 1048589, 0, 1, 1048590, 0, 1, 1048591, 0, 1, 1048592, 0, 1, 1048593, 0, 1, 1048594, 0, 1, 1048595, 0, 1, 1048596, 0, 1, 1048597, 0, 1, 1048598, 0, 1, 1048599, 0, 1, 1048600, 0, 1, 1048601, 0, 2, 1114114, 0, 131072, 1114115, 0, 131073, 1114116, 0, 131073, 1114117, 0, 131073, 1114118, 0, 131073, 1114119, 0, 131073, 1114120, 0, 131073, 1114121, 0, 131073, 1114122, 0, 131073, 1114123, 0, 131073, 1114124, 0, 131073, 1114125, 0, 131073, 1114126, 0, 131073, 1114127, 0, 131073, 1114128, 0, 131073, 1114129, 0, 131073, 1114130, 0, 131073, 1114131, 0, 131073, 1114132, 0, 131073, 1114133, 0, 131073, 1114134, 0, 131073, 1114135, 0, 131073, 1114136, 0, 131073, 1114137, 0, 131074 )

[node name="Control" type="Control" parent="."]
margin_left = -16.0
margin_right = 464.0
margin_bottom = 322.0

[node name="Play" type="Button" parent="Control"]
margin_left = 138.0
margin_top = 95.0
margin_right = 309.0
margin_bottom = 124.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 46 )
custom_styles/normal = SubResource( 2 )
text = "Play"

[node name="Exit" type="Button" parent="Control"]
margin_left = 138.0
margin_top = 176.0
margin_right = 309.0
margin_bottom = 205.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 47 )
custom_styles/normal = SubResource( 2 )
text = "Exit"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 224, 160 )
current = true
zoom = Vector2( 0.73, 0.7 )

[node name="controls" type="Label" parent="."]
margin_left = 244.0
margin_top = 154.0
margin_right = 383.0
margin_bottom = 170.0
custom_fonts/font = SubResource( 45 )
text = "W A S D - to move"

[node name="controls2" type="Label" parent="."]
margin_left = 246.0
margin_top = 172.0
margin_right = 385.0
margin_bottom = 188.0
custom_fonts/font = SubResource( 45 )
text = "Shift - to dash"

[node name="controls3" type="Label" parent="."]
margin_left = 245.0
margin_top = 192.0
margin_right = 384.0
margin_bottom = 208.0
custom_fonts/font = SubResource( 45 )
text = "Space - to jump"

[node name="controls4" type="Label" parent="."]
margin_left = 245.0
margin_top = 207.0
margin_right = 384.0
margin_bottom = 223.0
custom_fonts/font = SubResource( 45 )
text = "E - to interact"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Fade_in = SubResource( 49 )
anims/Fade_out = SubResource( 50 )
anims/RESET = SubResource( 51 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_right = 479.0
margin_bottom = 322.0
color = Color( 0, 0, 0, 1 )

[connection signal="pressed" from="Control/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Control/Exit" to="." method="_on_Exit_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
